tests/ui/rfcs/rfc-2632-const-trait-impl/effects/minicore.stderr
warning: the feature `effects` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/minicore.rs:8:30
   |
LL | #![feature(const_trait_impl, effects, const_mut_refs)]
   |                              ^^^^^^^
   |
   = note: see issue #102090 <https://github.com/rust-lang/rust/issues/102090> for more information
   = note: `#[warn(incomplete_features)]` on by default

error: requires `EffectsCompat` lang_item
  --> $DIR/minicore.rs:455:9
   |
LL | impl<T: Clone> Clone for RefCell<T> {
   |         ^^^^^

error: aborting due to 1 previous error; 1 warning emitted

